# LLMBenchmarkForCCL

./: .env.example  README.md  ai_models_lod.csv  app_get_random_cases_from_fandom.py  benchmark_and_rate.py  benchmark_lod.py  chart.py  pyproject.toml  random_cases.csv  rate_embedding.py  requirements.txt
llm/: llm_lod.py  llm_wrapper.py  lod_models_list_creator.py  test_lod.py
results/: case_model_results_2024-09-12_15-12-02.csv  case_model_results_2024-09-12_15-12-16.csv  case_model_results_2024-09-12_15-30-24.csv  case_model_results_2024-10-02_14-28-57.csv  case_model_results_2024-11-21_20-34-57.csv  case_model_results_2024-11-21_20-37-17.csv  case_model_results_2025-05-15_15-37-57.csv  case_model_results_2025-06-04_14-17-42.csv  case_model_results_2025-06-04_14-31-16.csv  case_model_results_2025-06-05_10-24-40.csv  case_model_results_2025-06-09_12-11-56.csv  case_model_results_2025-06-26_14-55-18.csv  case_model_results_2025-07-04_10-13-14.csv  evaluated_case_model_results_with_scores.csv  evaluated_case_model_results_with_section_similarity.csv  evaluated_case_model_results_with_similarity.csv
