[tool.poetry]
name = "llmbenchmarkforccl"
version = "0.1.0"
description = ""
authors = ["nima <nima.ab@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
scipy = "1.16.0"
annotated-types = "0.7.0"
anyio = "4.4.0"
awscli = "1.34.18"
beautifulsoup4 = "4.12.3"
boto3 = "1.35.18"
botocore = "1.35.18"
certifi = "2024.8.30"
charset-normalizer = "3.3.2"
colorama = "0.4.6"
distro = "1.9.0"
docutils = "0.16"
h11 = "0.14.0"
httpcore = "1.0.5"
httpx = "0.27.2"
idna = "3.8"
iniconfig = "2.0.0"
jiter = "0.5.0"
jmespath = "1.0.1"
openai = "^1.54.0"
packaging = "24.1"
pluggy = "1.5.0"
pyasn1 = "0.6.1"
pydantic = "2.9.1"
pydantic-core = "2.23.3"
pytest = "8.3.3"
python-dateutil = "2.9.0.post0"
pyyaml = "6.0.2"
requests = "2.32.3"
rsa = "4.7.2"
s3transfer = "0.10.2"
six = "1.16.0"
sniffio = "1.3.1"
soupsieve = "2.6"
tqdm = "4.66.5"
typing-extensions = "4.12.2"
urllib3 = "1.26.15"  # Downgraded to be compatible with botocore
wikia = "1.4.4"
pandas = "^2.2.3"
litellm = "^1.52.10"
sentence-transformers = "^4.1.0"
scikit-learn = "^1.6.1"
matplotlib = "^3.10.3"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
